# NexusKV

./: .gitignore  README.md  go.mod  go.sum
cmd/server/: main.go
config/: nexus-kv.yaml
docs/architecture/: migration-status.md  repo-assessment.md  target-platform.md
docs/benchmarks/: benchmark-methodology.md
docs/design/: attention-state-descriptor.md  connector-lifecycle.md  controlplane-execution-policy.md  execution-boundary.md  nxradixtree.md  payload-transfer-contract.md  python-rust-planner-bridge.md  shared-schema.md  transport-backend-catalog.md
docs/ops/: reliability-model.md
go/: go.mod
go/config/: config.go  config_test.go  execution_policy.go  execution_policy_test.go
pkg/config/: config.go  watcher.go
pkg/health/: health.go
pkg/log/: hotreload.go
pkg/metrics/: metrics.go
pkg/raft/: hotreload.go  node.go
pkg/storage/: bptree.go  engine.go  hotreload.go  lsm_tree.go
pkg/wal/: segment.go  wal.go  wal_test.go
python/: pyproject.toml
python/nexuskv/: __init__.py
python/tests/: test_backend_catalog.py  test_connector_lifecycle.py  test_connectors.py  test_contract_codegen.py  test_execution_layer.py  test_execution_policy.py  test_rust_planner_integration.py  test_state.py
rust/: Cargo.toml
rust/crates/bindings-py/: Cargo.toml
rust/crates/bindings-py/src/: lib.rs
schema/: nexuskv_contract_v1.json  nexuskv_execution_policy_v1.json
tests/: README.md
tests/bench-smoke/: README.md
tests/compat/: README.md
tests/e2e/: README.md
tests/fault/: README.md
tests/integration/: README.md
tools/: generate_contracts.py
(+35 files in other folders)
