[package]
name = "bindings-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "nexuskv_planner_native"
crate-type = ["cdylib"]

[dependencies]
nexus-state = { path = "../nexus-state" }
nxradixtree-core = { path = "../nxradixtree-core" }
pyo3 = { version = "0.22.6", features = ["extension-module"] }
serde = "1.0"
serde_json = "1.0"
